<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.request_money">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/flecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="50dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/enviar_dinero"
            android:textSize="20sp" />

    </LinearLayout>




    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_destinatario_y"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/description"
            android:src="@drawable/profile_vacio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nombre_destinatario_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/jua"
            android:text="@string/inicial"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/profile_destinatario_y" />


        <TextView
            android:id="@+id/nombre_usuario_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/jua"
            android:text="@string/nombre"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/fecha_y"
            app:layout_constraintStart_toStartOf="@+id/profile_destinatario_y" />

        <TextView
            android:id="@+id/fecha_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0.5"
            android:fontFamily="@font/jua"
            android:text="@string/email"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nombre_usuario_y"
            app:layout_constraintTop_toTopOf="@+id/profile_destinatario_y" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/form_nombre_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jua"
        android:text="@string/cantidad_a_transferir"
        tools:ignore="DuplicateIds" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/verde">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_imput_border_green"
            android:fontFamily="@font/jua"
            android:hint="@string/cantidad_a_ingresar_monto" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/form_nombre_ingresardinero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/jua"
        android:text="@string/notas_de_transferencia" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColorHint="@color/gristexto"
        app:boxBackgroundMode="filled"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/background_imput"
            android:fontFamily="@font/jua"
            android:hint="@string/placeholder_notas_de_transferencia"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_enviar_dinero2"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/azul"
        android:fontFamily="@font/jua"
        android:text="@string/btn_ingresar_dinero"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/request_icon"
        app:iconTint="@color/white"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>