<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginPage">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="409dp"
        android:layout_height="912dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="267dp"
            android:layout_height="85dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/jua"
            android:lineSpacingExtra="20sp"
            android:text="@string/title_login_page"
            android:textAlignment="viewStart"
            android:textColor="@color/negro"
            android:textSize="32sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="315dp"
            android:layout_height="58dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="112dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/jua"
                android:hint="@string/Email"
                android:inputType="text|textEmailAddress"
                android:text="@string/ingresa_tu_email"
                android:textAlignment="viewStart"
                android:textColor="@color/material_dynamic_neutral80"
                android:textSize="14sp"
                android:typeface="normal" />


        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="315dp"
            android:layout_height="58dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="214dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.0">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fontFamily="@font/jua"
                android:hint="@string/Contraseña"
                android:inputType="text|textVisiblePassword"
                android:text="@string/ingresa_tu_contraseña"
                android:textAlignment="viewStart"
                android:textColor="@color/material_dynamic_neutral30"
                android:textSize="14sp"
                android:typeface="normal"
                app:startIconContentDescription="@string/content_description_start_icon"
                app:startIconDrawable="@drawable/ic_search_24dp">
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.77"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout"
            app:srcCompat="@drawable/view_icon"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:text="@string/olvidaste_tu_contrasena"
            android:textColor="@color/azul"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.737"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="458dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:layout_marginBottom="352dp"
            android:backgroundTint="@color/azul"
            android:fontFamily="@font/jua"
            android:text="@string/btn_login"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/jua"
            android:text="@string/txt_crear_cta"
            android:textColor="@color/azul"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.288" />
        />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>





